# cpp-practice

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Dockerfile
docs/: Computer Organization and Design notes.md  English Grammar.md  组件安装手册.md
docs/Computer Operating System/: README.md
docs/Computer Principles/: Computer Organization and Architecture MIPS.md  README.md
docs/实时项目：基于Flink + Hudi的湖仓一体项目/: 一、Hudi核心概念和读写流程详解.md  六、Flink入湖任务核心优化.md
python/: flink-test.py  main.ipynb
setup/: main.py
setup/spack/: Dockerfile  spack.yaml
setup/spack/.spack/: config.yaml
setup/spack/mirror/: Dockerfile  spack_mirror_server.py
src/: CMakeLists.txt
src/basics/: CMakeLists.txt  array_and_ptr.cpp  auto_decltype.cpp  main.cpp  rvalue_test.cpp
src/cuda/: CMakeLists.txt  main.cu
src/ds-algo/: main.cpp  main.py
src/ds-algo/sort/: merge_sort.h  quick_sort.h  simple_sort.h
src/omp/: CMakeLists.txt  macros_omp_format.h  omp_test.cpp
src/opencl/: CMakeLists.txt
